Updated metric routes and requests
